# paint-game

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: db.rs  main.rs  simulate_users.rs  types.rs
src/routes/: connect_user.rs  index.rs  mod.rs
static/: canvas.js  index.html  tools.js
