[package]
name = "paint-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = "0.1.1"
log = "0.4"
env_logger = "0.9"
redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager"] }