[package]
name = "paint-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = "0.1.1"
log = "0.4"
env_logger = "0.9"
redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager"] }
uuid = {version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tungstenite = {version = "0.17.2"}
url = { version = "2.2.2" }

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "simulated_users"
path = "src/simulate_users.rs"
